# feincms3-accordion

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/accordion/: admin.py  apps.py  models.py  renderer.py
src/accordion/locale/de/LC_MESSAGES/: django.mo  django.po
src/accordion/migrations/: 0001_initial.py
src/accordion/static/accordion/: accordion_nojs.css  exclusive-accordion-polyfill.js
src/accordion/templates/: image.html
src/accordion/templates/accordion/: accordion.html  accordion_nojs.html
